--- a/README
+++ b/README
@@ -9,8 +9,9 @@ WebSocket & ClojureScript repository.
 ClojureScript with closure-library from SVN HEAD.
 You can get it from my clone of ClojureScript for now: 
 
-  git clone https://github.com/neotyk/clojurescript/tree/35-cl-head -b 35-cl-head
+  git clone https://github.com/neotyk/clojurescript.git -b 35-cl-head
 
+Make sure $CLOJURESCRIPT/bin is in your PATH.
 Than you bootstrap cljs with:
 
   ./script/bootstrap --closure-library-head
